<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/current_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/check_or_call"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/call"
            android:onClick="checkOrCallOnClickHandler" />
        <Button
            android:id="@+id/raise"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/raise"
            android:onClick="raiseOnClickHandler" />
        <Button
            android:id="@+id/fold"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/fold"
            android:onClick="foldOnClickHandler" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>